Added aditional chat - Stocks in inventory

--- a/inventory-management-system/src/app/mychart/mychart.component.html
+++ b/inventory-management-system/src/app/mychart/mychart.component.html
@@ -1,7 +1,10 @@
 <div class="row">
-  <div class="col lg-6">
-    <h6 class="h3 ms-5 mt-5 mb-5">Product Category</h6>
-    <canvas id="piechart" class="m-5"></canvas>
+  <div class="col">
+    <canvas id="piechart" class="mt-5 ms-5 me-5"></canvas>
+    <p class="h6 mt-3 text-center">Product Category</p>
   </div>
-  <div class="col lg-6"></div>
+  <div class="col">
+    <canvas id="barchart" class="mt-5 ms-5 me-5"></canvas>
+    <p class="h6 mt-3 text-center">No.of Stocks in Warehouse</p>
+  </div>
 </div>
