--- a/inventory-management-system/src/app/dashboard/dashboard.component.html
+++ b/inventory-management-system/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,12 @@
-<app-nav></app-nav> <app-statistics></app-statistics><app-mychart></app-mychart>
+<nav lazy>
+  <app-nav />
+</nav>
+<section lazy>
+  <app-statistics />
+</section>
+<section lazy>
+  <app-mychart />
+</section>
+<section lazy>
+  <app-statistics-2 />
+</section>
