--- a/inventory-management-system/src/app/nav/nav.component.html
+++ b/inventory-management-system/src/app/nav/nav.component.html
@@ -65,8 +65,8 @@
         </ul>
         <div class="text-center" style="margin-top: 70%">
           <button class="btn btn-danger" type="submit">
-            <a routerLink="/logout" class="text-decoration-none text-light"
-              >Logout</a
+            <a routerLink="/logout" class="text-decoration-none text-light">
+              Logout</a
             >
           </button>
         </div>
