--- a/inventory-management-system/src/app/statistics/statistics.component.css
+++ b/inventory-management-system/src/app/statistics/statistics.component.css
@@ -3,3 +3,8 @@
   justify-content: space-evenly;
   align-content: space-evenly;
 }
+
+.card {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+}
