--- a/inventory-management-system/src/app/statistics-2/statistics-2.component.html
+++ b/inventory-management-system/src/app/statistics-2/statistics-2.component.html
@@ -15,7 +15,48 @@
       </div>
     </div>
   </div>
-  <div class="col mt-5 d-flex justify-content-center">
-    <canvas id="barchart" class="mt-5 ms-5 me-5"></canvas>
+  <div class="col m-5 d-flex justify-content-center">
+    <div class="card">
+      <div class="title">
+        <p class="heading mt-3">UPCOMING STOCKS</p>
+        <p class="desc"></p>
+      </div>
+      <div class="wrapper">
+        <div class="color black">
+          AR/VR Stocks
+          <span class="hex">1200 units</span>
+        </div>
+        <div class="color eerie-black">
+          MEtaverse
+          <span class="hex">250 units</span>
+        </div>
+        <div class="color chinese-black">
+          Mobiles
+          <span class="hex">650 units</span>
+        </div>
+        <div class="color night-rider">
+          Lamps
+          <span class="hex">150 units</span>
+        </div>
+        <div class="color chinese-white">
+          Home Decor
+          <span class="hex">1000 units</span>
+        </div>
+        <div class="color anti-flash-white">
+          Electronic Gadgets
+          <span class="hex">989 units</span>
+        </div>
+        <div class="color white">
+          Accessories
+          <span class="hex">100 units</span>
+        </div>
+        <div class="color white text-center">
+          <a href="" class="text-decoration-none">...</a>
+          <span class="hex"
+            ><a href="" class="text-decoration-none">...</a></span
+          >
+        </div>
+      </div>
+    </div>
   </div>
 </div>
